--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.1.1",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.7.0",
